--- a/tasks.org
+++ b/tasks.org
@@ -137,6 +137,24 @@
 ** TODO Support Rocket Plane style correctly, check contracts match.
 ** TODO Support Stage style correctly, check contracts match.
 ** TODO Support LandAtKSC style correctly, check contracts match.
+** TODO Add parachute/escape style contracts
+- To encourage safey!
+- Start, just after first flight: Parachute from a plane and survive.
+  - Min height 1km.
+  - Parachute can open at any height.
+- Start, after Trop High: Skydive from a plane
+  - Min height 5km.
+  - Parachute can open at any height.
+- Early, after 220km speed: Eject from a high speed plane
+- Early, after Stratosphere High: HALO jump from a plane (min height Strat High)
+  - Parachute must open below 1km.
+- Early, after Mach 1 speed: Eject from a supersonic plane
+- Modern, after Mach 3 speed: Eject from a hypersonic plane
+- Modern, after Mach 4: HAHO jump from a plane (min height Strat High)
+  - Parachutist must travel at least 30km.
+- Modern, after Mach 5: Escape capsule
+  - Parachutist must be in small escape pod which ejects
+  - Then escapes from pod on parachute when lower (?)
 ** TODO Ensure craft do not misuse staging
 - Allow staging for some contracts.
 ** TODO Ensure craft do not misuse parachutes
